--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-simple-maps": "^3.0.0",
+    "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   },
   "browserslist": {
