--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^14.2.1",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "css-select": "^5.1.0",
     "d3-scale": "^4.0.2",
